<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_name" />

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_name">
            </EditText>

            <TextView
                android:id="@+id/textViewMobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_mobileNo" />

            <EditText
                android:id="@+id/editTextMobileNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890"
                android:hint="@string/hint_mobileNo"
                android:inputType="number">
            </EditText>

            <TextView
                android:id="@+id/textViewGroupSize"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/display_grpSize" />

            <EditText
                android:id="@+id/editTextPax"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="1234567890"
                android:hint="@string/hint_pax"
                android:inputType="number">
            </EditText>

            <CheckBox
                android:id="@+id/checkBoxSmokeArea"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkbox" />

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonReserve"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_reserve" />

                <Button
                    android:id="@+id/buttonReset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/btn_reset" />
            </LinearLayout>


        </LinearLayout>
    </ScrollView>

</LinearLayout>